--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1,48 +1,37 @@
-.container {
-    max-width: 500px;
-    width: 100%;
-    margin: 0 auto;
-    height: 500px;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    margin-top: 120px;
-    gap: 5px;
+body {
+    text-align: center;
     padding: 20px;
+    background-color: rgb(15, 15, 15);
+    color: white;
 
-    .box1,
-    .box2,
-    .box3,
-    .box4,
-    .box5,
-    .box6,
-    .box7,
-    .box8,
-    .box9 {
-        max-width: 166px;
+    .title {
+        font-size: 30px;
+    }
+
+    .board {
+        max-width: 450px;
         width: 100%;
-        height: 166px;
-        border: 3px solid black;
-        border-top-left-radius: 255px 15px;
-        border-top-right-radius: 15px 225px;
-        border-bottom-right-radius: 225px 15px;
-        border-bottom-left-radius: 15px 255px;
-        transition: all 0.2s;
-        cursor: pointer;
-        position: relative;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        padding: 20px;
 
-        &:hover {
-            background-color: rgba(195, 195, 195, 0.622);
-            transform: scale(1.1);
-        }
+        .box {
+            max-width: 150px;
+            height: 150px;
+            width: 100%;
+            border: 1px solid white;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 30px;
+            box-sizing: border-box;
+            transition: all 0.2s;
 
-        span {
-            font-size: 100px;
-            display: inline-block;
-            font-family: 'Swanky and Moo Moo', cursive;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
+            &:hover {
+                background-color: rgb(44, 44, 44);
+            }
         }
     }
 }
