--- a/css/gobal.css
+++ b/css/gobal.css
@@ -143,24 +143,40 @@ body {
   padding: 20px;
   background-color: rgb(15, 15, 15);
   color: white;
+  position: relative;
+}
+body::-webkit-scrollbar {
+  width: 8px;
+}
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(41, 41, 41);
+  border-radius: 50px;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(51, 51, 51);
 }
 body .title {
   font-size: 30px;
+  margin-bottom: 50px;
 }
 body .board {
   max-width: 450px;
   width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: auto auto auto;
-  padding: 20px;
+  grid-template-columns: 1fr 1fr 1fr;
+  border-radius: 30px;
+  -webkit-box-shadow: 0px 10px 12px -2px rgba(57, 57, 57, 0.75);
+          box-shadow: 0px 10px 12px -2px rgba(57, 57, 57, 0.75);
 }
 body .board .box {
   max-width: 150px;
   height: 150px;
   width: 100%;
-  border: 1px solid white;
-  cursor: pointer;
+  border: 2px solid white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -170,12 +186,131 @@ body .board .box {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  cursor: pointer;
   font-size: 30px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
+body .board .box:active {
+  -webkit-transform: scale(0.96);
+      -ms-transform: scale(0.96);
+          transform: scale(0.96);
+}
 body .board .box:hover {
   background-color: rgb(44, 44, 44);
+}
+body .overlay {
+  width: 100%;
+  height: 150%;
+  background-color: rgba(0, 0, 0, 0.377);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+body .overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+body .winner {
+  background-color: rgb(31, 31, 31);
+  position: fixed;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+      -ms-transform: translate(-50%);
+          transform: translate(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 450px;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50px;
+  z-index: 1000;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  bottom: -80px;
+  -webkit-transition: bottom 0.2s;
+  transition: bottom 0.2s;
+}
+body .winner.active {
+  bottom: 20px;
+}
+@media (max-width: 262px) {
+  body .winner {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+body .winner .close-pop-up {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  background-color: transparent;
+  color: white;
+  border: none;
+  border-radius: 50%;
+}
+body .winner .winner-text {
+  font-size: 18px;
+  font-weight: 600;
+}
+@media (max-width: 262px) {
+  body .winner .winner-text {
+    margin-bottom: 20px;
+  }
+}
+body .winner .buttons {
+  max-width: 160px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+body .winner .buttons .restart {
+  background-color: rgb(190, 15, 15);
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 20px;
+  font-weight: 600;
+  margin-right: 10px;
+  cursor: pointer;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
+  border: 2px solid transparent;
+}
+body .winner .buttons .restart:hover {
+  background-color: rgb(143, 23, 23);
+  border: 2px solid white;
+}
+body .winner .buttons .quit {
+  background-color: white;
+  border: none;
+  padding: 10px 15px;
+  font-weight: 600;
+  border-radius: 20px;
+  border: 2px solid transparent;
+  cursor: pointer;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
+}
+body .winner .buttons .quit:hover {
+  background-color: rgb(223, 223, 223);
 }/*# sourceMappingURL=gobal.css.map */
