--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -3,9 +3,28 @@ body {
     padding: 20px;
     background-color: rgb(15, 15, 15);
     color: white;
+    position: relative;
+
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: rgb(41, 41, 41);
+        border-radius: 50px;
+
+        &:hover {
+            background-color: rgb(51, 51, 51);
+        }
+    }
 
     .title {
         font-size: 30px;
+        margin-bottom: 50px;
     }
 
     .board {
@@ -13,24 +32,132 @@ body {
         width: 100%;
         margin: 0 auto;
         display: grid;
-        grid-template-columns: auto auto auto;
-        padding: 20px;
+        grid-template-columns: 1fr 1fr 1fr;
+        border-radius: 30px;
+        box-shadow: 0px 10px 12px -2px rgba(57, 57, 57, 0.75);
 
         .box {
             max-width: 150px;
             height: 150px;
             width: 100%;
-            border: 1px solid white;
-            cursor: pointer;
+            border: 2px solid white;
             display: flex;
             align-items: center;
             justify-content: center;
+            cursor: pointer;
             font-size: 30px;
-            box-sizing: border-box;
             transition: all 0.2s;
+
+            &:active {
+                transform: scale(0.96);
+            }
 
             &:hover {
                 background-color: rgb(44, 44, 44);
+            }
+        }
+    }
+
+    .overlay {
+        width: 100%;
+        height: 150%;
+        background-color: rgba(0, 0, 0, 0.377);
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.2s;
+
+        &.active {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+
+    .winner {
+        background-color: rgb(31, 31, 31);
+        position: fixed;
+        left: 50%;
+        transform: translate(-50%);
+        display: flex;
+        max-width: 450px;
+        width: 100%;
+        justify-content: space-between;
+        padding: 20px;
+        align-items: center;
+        border-radius: 50px;
+        z-index: 1000;
+        flex-wrap: wrap;
+        bottom: -80px;
+        transition: bottom 0.2s;
+
+        &.active {
+            bottom: 20px;
+        }
+
+        @media (max-width: 262px) {
+            justify-content: space-around;
+        }
+
+        .close-pop-up {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            background-color: transparent;
+            color: white;
+            border: none;
+            border-radius: 50%;
+        }
+
+        .winner-text {
+            font-size: 18px;
+            font-weight: 600;
+
+            @media (max-width: 262px) {
+                margin-bottom: 20px;
+            }
+        }
+
+        .buttons {
+            max-width: 160px;
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+
+            .restart {
+                background-color: rgb(190, 15, 15);
+                border: none;
+                color: white;
+                padding: 10px 15px;
+                border-radius: 20px;
+                font-weight: 600;
+                margin-right: 10px;
+                cursor: pointer;
+                transition: all 0.15s;
+                border: 2px solid transparent;
+
+                &:hover {
+                    background-color: rgb(143, 23, 23);
+                    border: 2px solid white;
+                }
+            }
+
+            .quit {
+                background-color: white;
+                border: none;
+                padding: 10px 15px;
+                font-weight: 600;
+                border-radius: 20px;
+                border: 2px solid transparent;
+                cursor: pointer;
+                transition: all 0.15s;
+
+                &:hover {
+                    background-color: rgb(223, 223, 223);
+                }
             }
         }
     }
