--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -4,6 +4,8 @@ body {
     background-color: rgb(15, 15, 15);
     color: white;
     position: relative;
+    overflow-y: hidden;
+    font-family: Arial, Helvetica, sans-serif;
 
     &::-webkit-scrollbar {
         width: 8px;
@@ -91,10 +93,10 @@ body {
         z-index: 1000;
         flex-wrap: wrap;
         bottom: -80px;
-        transition: bottom 0.2s;
+        transition: bottom 0.3s;
 
         &.active {
-            bottom: 20px;
+            bottom: 100px;
         }
 
         @media (max-width: 262px) {
