--- a/css/gobal.css
+++ b/css/gobal.css
@@ -136,6 +136,7 @@ a {
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
