--- a/css/gobal.css
+++ b/css/gobal.css
@@ -161,9 +161,70 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-thumb:hover {
   background-color: rgb(51, 51, 51);
 }
-body .title {
+body header .title {
   font-size: 30px;
   margin-bottom: 50px;
+}
+body header .menu {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(57, 57, 57);
+  border-radius: 50%;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
+}
+body header .menu:hover {
+  background-color: rgb(73, 73, 73);
+}
+body header .menu.active {
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
+}
+body header .menu.active .lines:nth-child(1) {
+  -webkit-transform: translateY(7.5px) rotate(45deg);
+      -ms-transform: translateY(7.5px) rotate(45deg);
+          transform: translateY(7.5px) rotate(45deg);
+  background-color: #26a7de;
+}
+body header .menu.active .lines:nth-child(3) {
+  -webkit-transform: translateY(-7px) rotate(-45deg);
+      -ms-transform: translateY(-7px) rotate(-45deg);
+          transform: translateY(-7px) rotate(-45deg);
+  background-color: #26a7de;
+}
+body header .menu.active .lines:nth-child(2) {
+  opacity: 0;
+}
+body header .menu .lines {
+  width: 20px;
+  margin-bottom: 5px;
+  height: 2px;
+  background-color: white;
+  -webkit-transition: background-color 0.2s, -webkit-transform 0.2s;
+  transition: background-color 0.2s, -webkit-transform 0.2s;
+  transition: transform 0.2s, background-color 0.2s;
+  transition: transform 0.2s, background-color 0.2s, -webkit-transform 0.2s;
+}
+body header .menu .lines:nth-child(3) {
+  margin-bottom: 0;
 }
 body .board {
   max-width: 450px;
