--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -24,9 +24,63 @@ body {
         }
     }
 
-    .title {
-        font-size: 30px;
-        margin-bottom: 50px;
+    header {
+        .title {
+            font-size: 30px;
+            margin-bottom: 50px;
+        }
+
+        .menu {
+            width: 50px;
+            height: 50px;
+            background-color: rgb(57, 57, 57);
+            border-radius: 50%;
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            transition: all 0.15s;
+
+            &:hover {
+                background-color: rgb(73, 73, 73);
+            }
+
+            &.active {
+                transform: rotate(360deg);
+
+                .lines {
+                    &:nth-child(1) {
+                        transform: translateY(7.5px) rotate(45deg);
+                        background-color: #26a7de;
+                    }
+
+                    &:nth-child(3) {
+                        transform: translateY(-7px) rotate(-45deg);
+                        background-color: #26a7de;
+                    }
+
+                    &:nth-child(2) {
+                        opacity: 0;
+                    }
+                }
+            }
+
+            .lines {
+                width: 20px;
+                margin-bottom: 5px;
+                height: 2px;
+                background-color: white;
+                transition: transform 0.2s, background-color 0.2s;
+
+                &:nth-child(3) {
+                    margin-bottom: 0;
+                }
+            }
+        }
     }
 
     .board {
