--- a/css/gobal.css
+++ b/css/gobal.css
@@ -162,8 +162,78 @@ body::-webkit-scrollbar-thumb:hover {
   background-color: rgb(51, 51, 51);
 }
 body header .title {
+  margin-top: 10px;
   font-size: 30px;
   margin-bottom: 50px;
+}
+body header .open-menu {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 10000;
+  background-color: transparent;
+  border-radius: 50%;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+body header .open-menu .contents {
+  margin-top: 55px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+body header .open-menu .contents .option {
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  margin-bottom: 10px;
+  cursor: pointer;
+  background-color: transparent;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  padding: 7px 5px;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+body header .open-menu .contents .option i {
+  font-size: 20px;
+  margin-top: 5px;
+}
+body header .open-menu .contents .option p {
+  font-size: 10px;
+}
+body header .open-menu .contents .option:hover {
+  background-color: rgb(33, 33, 33);
+  color: #26a7de;
 }
 body header .menu {
   width: 50px;
@@ -187,28 +257,76 @@ body header .menu {
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
-  -webkit-transition: all 0.15s;
-  transition: all 0.15s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  z-index: 100001;
+}
+body header .menu .hamburger-menu {
+  position: absolute;
+  top: 17px;
+  z-index: 100;
 }
 body header .menu:hover {
   background-color: rgb(73, 73, 73);
 }
-body header .menu.active {
-  -webkit-transform: rotate(360deg);
-      -ms-transform: rotate(360deg);
-          transform: rotate(360deg);
+body header .menu.active ~ .open-menu {
+  background-color: rgb(57, 57, 57);
+  height: 230px;
+  border-radius: 30px;
+}
+body header .menu.active ~ .open-menu .option {
+  -webkit-animation: scale 0.5s ease-in-out 1;
+          animation: scale 0.5s ease-in-out 1;
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+@-webkit-keyframes scale {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+@keyframes scale {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+body header .menu.active .open-menu {
+  background-color: rgb(57, 57, 57);
+  height: 200px;
+  border-radius: 30px;
 }
 body header .menu.active .lines:nth-child(1) {
-  -webkit-transform: translateY(7.5px) rotate(45deg);
-      -ms-transform: translateY(7.5px) rotate(45deg);
-          transform: translateY(7.5px) rotate(45deg);
+  margin-bottom: 0;
+  -webkit-transform: translateY(5px) rotate(45deg);
+      -ms-transform: translateY(5px) rotate(45deg);
+          transform: translateY(5px) rotate(45deg);
   background-color: #26a7de;
 }
 body header .menu.active .lines:nth-child(3) {
-  -webkit-transform: translateY(-7px) rotate(-45deg);
-      -ms-transform: translateY(-7px) rotate(-45deg);
-          transform: translateY(-7px) rotate(-45deg);
+  -webkit-transform: translateY(-5.1px) rotate(-45deg);
+      -ms-transform: translateY(-5.1px) rotate(-45deg);
+          transform: translateY(-5.1px) rotate(-45deg);
   background-color: #26a7de;
+  margin-bottom: 0;
 }
 body header .menu.active .lines:nth-child(2) {
   opacity: 0;
@@ -218,10 +336,10 @@ body header .menu .lines {
   margin-bottom: 5px;
   height: 2px;
   background-color: white;
-  -webkit-transition: background-color 0.2s, -webkit-transform 0.2s;
-  transition: background-color 0.2s, -webkit-transform 0.2s;
-  transition: transform 0.2s, background-color 0.2s;
-  transition: transform 0.2s, background-color 0.2s, -webkit-transform 0.2s;
+  -webkit-transition: background-color 0.2s, opacity 0.15s, -webkit-transform 0.2s ease-in-out;
+  transition: background-color 0.2s, opacity 0.15s, -webkit-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, background-color 0.2s, opacity 0.15s;
+  transition: transform 0.2s ease-in-out, background-color 0.2s, opacity 0.15s, -webkit-transform 0.2s ease-in-out;
 }
 body header .menu .lines:nth-child(3) {
   margin-bottom: 0;
@@ -325,12 +443,14 @@ body .winner .close-pop-up {
   border: none;
   border-radius: 50%;
 }
-body .winner .winner-text {
+body .winner .winner-text,
+body .winner .text {
   font-size: 18px;
   font-weight: 600;
 }
 @media (max-width: 262px) {
-  body .winner .winner-text {
+  body .winner .winner-text,
+  body .winner .text {
     margin-bottom: 20px;
   }
 }
@@ -377,4 +497,94 @@ body .winner .buttons .quit {
 }
 body .winner .buttons .quit:hover {
   background-color: rgb(223, 223, 223);
+}
+body .warning {
+  z-index: 1000000000;
+  position: fixed;
+  max-width: 500px;
+  width: 100%;
+  padding: 20px;
+  height: 250px;
+  background-color: rgb(57, 57, 57);
+  top: 50%;
+  left: 50%;
+  border-radius: 50px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+      -ms-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+}
+body .warning p {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+body .warning h5 {
+  font-weight: 600;
+  font-size: 20px;
+  color: rgb(190, 15, 15);
+}
+body .warning button {
+  width: 100px;
+  height: 40px;
+  background-color: rgb(190, 15, 15);
+  border-radius: 50px;
+  color: white;
+  border: 2px solid transparent;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
+  cursor: pointer;
+  font-weight: 600;
+}
+body .warning button:hover {
+  background-color: rgb(143, 23, 23);
+  border: 2px solid white;
+  color: white;
+}
+body .warning.active {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+      -ms-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  -webkit-animation: pop-up 0.4s ease-in-out 1;
+          animation: pop-up 0.4s ease-in-out 1;
+}
+@-webkit-keyframes pop-up {
+  0% {
+    -webkit-transform: translate(-50%, -50%) scale(0);
+            transform: translate(-50%, -50%) scale(0);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) scale(1.2);
+            transform: translate(-50%, -50%) scale(1.2);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
+}
+@keyframes pop-up {
+  0% {
+    -webkit-transform: translate(-50%, -50%) scale(0);
+            transform: translate(-50%, -50%) scale(0);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) scale(1.2);
+            transform: translate(-50%, -50%) scale(1.2);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
+  }
 }/*# sourceMappingURL=gobal.css.map */
