--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -6,6 +6,7 @@ body {
     position: relative;
     overflow-y: hidden;
     font-family: Arial, Helvetica, sans-serif;
+    transition: all 0.2s;
 
     &::-webkit-scrollbar {
         width: 8px;
@@ -68,6 +69,51 @@ body {
                     align-items: center;
                     justify-content: space-between;
 
+                    .switch-container {
+                        width: 35px;
+                        height: 35px;
+                        border: 2px solid white;
+                        border-radius: 50px;
+                        position: relative;
+                        overflow: hidden;
+                        cursor: pointer;
+                        transition: all 0.15s;
+
+                        .circle {
+                            position: absolute;
+                            width: 20px;
+                            height: 18px;
+                            background-color: white;
+                            border-radius: 50%;
+                            left: -2px;
+                            top: 0;
+                            display: flex;
+                            transition: left 0.2s, background-color 0.2s;
+
+                            i {
+                                color: black;
+                                font-size: 10px;
+                                position: absolute;
+                                left: 50%;
+                                transform: translate(-50%);
+                            }
+
+                            &.dark {
+                                left: 13px;
+                                background-color: black;
+
+                                i {
+                                    color: white;
+                                }
+                            }
+                        }
+
+                        &:has(.circle.dark) {
+                            background-color: transparent;
+                            border: 2px solid black;
+                        }
+                    }
+
                     i {
                         font-size: 20px;
                         margin-top: 5px;
@@ -80,6 +126,18 @@ body {
                     &:hover {
                         background-color: rgb(33, 33, 33);
                         color: #26a7de;
+
+                        .switch-container {
+                            border: 2px solid #26a7de;
+
+                            .circle {
+                                background-color: #26a7de;
+
+                                i {
+                                    color: white;
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -217,6 +275,24 @@ body {
         top: 0;
         left: 0;
         z-index: 100;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.2s;
+
+        &.active {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+
+    .warning-overlay {
+        width: 100%;
+        height: 150%;
+        background-color: rgba(0, 0, 0, 0.377);
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1000001;
         opacity: 0;
         visibility: hidden;
         transition: opacity 0.2s;
@@ -380,6 +456,96 @@ body {
                     transform: translate(-50%, -50%) scale(1);
                 }
             }
+        }
+    }
+
+    &.light-theme {
+        background-color: white;
+        color: black;
+
+        h1 {
+            color: black;
+        }
+
+        .menu {
+            background-color: rgb(218, 218, 218);
+
+            &:hover {
+                background-color: rgb(189, 189, 189);
+            }
+
+            .hamburger-menu {
+                div {
+                    background-color: black;
+                }
+            }
+
+            &.active {
+                &~.open-menu {
+                    background-color: rgb(218, 218, 218);
+
+                    .option {
+
+                        p {
+                            color: black;
+
+                        }
+
+                        i {
+                            color: black;
+                        }
+
+                        &:hover {
+                            background-color: rgb(189, 189, 189);
+
+                            p {
+                                color: #26a7de;
+                            }
+
+                            i {
+                                color: #26a7de;
+                            }
+
+                            .switch-container {
+                                border: 2px solid #26a7de;
+                            }
+                        }
+                    }
+
+                }
+            }
+        }
+
+
+
+        .board {
+            box-shadow: 0px 10px 12px -2px rgba(228, 228, 228, 0.75);
+
+            .box {
+                border: 2px solid black;
+
+                &:hover {
+                    background-color: rgb(199, 199, 199);
+                }
+            }
+        }
+
+        .winner {
+            background-color: rgb(216, 216, 216);
+
+            .quit {
+                background-color: black;
+                color: white;
+
+                &:hover {
+                    background-color: rgb(48, 48, 48);
+                }
+            }
+        }
+
+        .warning {
+            background-color: rgb(216, 216, 216);
+            color: black;
         }
     }
 }
